# Lightning-Unification

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  pennylane_lightning_kokkos  requirements-dev.txt  setup.py
pennylane_lightning/src/: CMakeLists.txt
pennylane_lightning/src/algorithms/: AdjointJacobian.hpp  AdjointJacobianBase.hpp  CMakeLists.txt  JacobianData.hpp
pennylane_lightning/src/algorithms/tests/: CMakeLists.txt  Test_AdjointJacobian.cpp
pennylane_lightning/src/base/: CMakeLists.txt  StateVectorBase.hpp
pennylane_lightning/src/base/tests/: CMakeLists.txt  Test_StateVectorBase.cpp
pennylane_lightning/src/bindings/: Bindings.cpp  Bindings.hpp
pennylane_lightning/src/executor/: CMakeLists.txt  Executor.hpp
pennylane_lightning/src/executor/tests/: CMakeLists.txt  Test_Executor.cpp
pennylane_lightning/src/gates/: Constant.hpp  GateOperation.hpp  Gates.hpp  KernelType.hpp
pennylane_lightning/src/measurements/: CMakeLists.txt  Measurements.hpp  MeasurementsBase.hpp
pennylane_lightning/src/measurements/tests/: CMakeLists.txt  Test_Measurements.cpp  Test_MeasurementsBase.cpp
pennylane_lightning/src/observables/: CMakeLists.txt  Observables.hpp
pennylane_lightning/src/observables/tests/: Test_Observables.cpp
pennylane_lightning/src/simulators/: CMakeLists.txt
pennylane_lightning/src/simulators/base/: CMakeLists.txt  StateVectorBase.hpp
pennylane_lightning/src/simulators/base/tests/: CMakeLists.txt  Test_StateVectorBase.cpp
pennylane_lightning/src/simulators/lightning_kokkos/: CMakeLists.txt  StateVectorKokkos.cpp  StateVectorKokkos.hpp  StateVectorLKokkos.cpp  StateVectorLKokkos.hpp
pennylane_lightning/src/simulators/lightning_kokkos/algorithms/: AdjointDiffKokkos.cpp  AdjointDiffKokkos.hpp  AdjointJacobianKokkos.cpp  AdjointJacobianKokkos.hpp  AlgorithmsKokkos.cpp  CMakeLists.txt
pennylane_lightning/src/simulators/lightning_kokkos/algorithms/tests/: Test_AdjointJacobianKokkos.cpp
pennylane_lightning/src/simulators/lightning_kokkos/bindings/: Bindings.cpp  CMakeLists.txt  LKokkosBindings.hpp
pennylane_lightning/src/simulators/lightning_kokkos/gates/: CMakeLists.txt  Constant.hpp  GateFunctors.hpp  GateFunctorsGenerator.hpp  GateFunctorsNonparam.hpp  GateFunctorsParam.hpp  GateOperation.hpp  GatesHost.hpp  KernelType.hpp
pennylane_lightning/src/simulators/lightning_kokkos/gates/tests/: Test_StateVectorKokkos_Generator.cpp  Test_StateVectorKokkos_NonParam.cpp  Test_StateVectorKokkos_Param.cpp
pennylane_lightning/src/simulators/lightning_kokkos/measurements/: CMakeLists.txt  ExpValFunctors.hpp  MeasurementsKokkos.cpp  MeasurementsKokkos.hpp  MeasuresFunctors.hpp  MeasuresKokkos.cpp  MeasuresKokkos.hpp
pennylane_lightning/src/simulators/lightning_kokkos/measurements/tests/: Test_StateVectorKokkos_Expval.cpp  Test_StateVectorKokkos_Measure.cpp  Test_StateVectorKokkos_Var.cpp
pennylane_lightning/src/simulators/lightning_kokkos/observables/: CMakeLists.txt  ObservablesKokkos.cpp  ObservablesKokkos.hpp
pennylane_lightning/src/simulators/lightning_kokkos/observables/tests/: CMakeLists.txt  Test_ObservablesKokkos.cpp  Test_StateVectorKokkos_Expval.cpp
pennylane_lightning/src/simulators/lightning_kokkos/simulator/: CMakeLists.txt
pennylane_lightning/src/simulators/lightning_kokkos/tests/: CMakeLists.txt  Test_StateVectorLKokkos.cpp
pennylane_lightning/src/simulators/lightning_kokkos/utils/: CMakeLists.txt  GetConfigInfo.hpp  LinearAlgebraKokkos.hpp  TestHelpersKokkos.hpp  TestHelpersStateVectors.hpp  UtilKokkos.hpp
pennylane_lightning/src/simulators/lightning_kokkos/utils/tests/: Test_LinearAlgebra.cpp
pennylane_lightning/src/simulators/lightning_qubit/: CMakeLists.txt  StateVectorLQubit.cpp  StateVectorLQubit.hpp  StateVectorLQubitManaged.hpp  StateVectorLQubitRaw.hpp
pennylane_lightning/src/simulators/lightning_qubit/algorithms/: AdjointJacobianLQubit.hpp  AlgorithmsLQubit.cpp  CMakeLists.txt  StatevectorJP.hpp  VectorJacobianProduct.hpp
pennylane_lightning/src/simulators/lightning_qubit/algorithms/tests/: CMakeLists.txt  (+3 more)
pennylane_lightning/src/simulators/lightning_qubit/bindings/: CMakeLists.txt  LQubitBindings.hpp
pennylane_lightning/src/simulators/lightning_qubit/gates/: AssignKernelMap_AVX2.cpp  AssignKernelMap_AVX2.hpp  AssignKernelMap_AVX512.cpp  AssignKernelMap_AVX512.hpp  AssignKernelMap_Default.cpp  AssignKernelMap_Default.hpp  CMakeLists.txt  Constant.hpp  DynamicDispatcher.hpp  GateIndices.cpp  GateIndices.hpp  GateOperation.hpp  Gates.hpp  KernelMap.hpp  KernelMap_Default.cpp  KernelMap_X64.cpp  KernelType.hpp  OpToMemberFuncPtr.hpp  RegisterKernel.hpp  RegisterKernels_AVX2.cpp  RegisterKernels_AVX512.cpp  RegisterKernels_Default.cpp  RegisterKernels_x64.cpp  RegisterKernels_x64.hpp
pennylane_lightning/src/simulators/lightning_qubit/measurements/: MeasurementsLQubit.hpp
pennylane_lightning/src/simulators/lightning_qubit/observables/: CMakeLists.txt  ObservablesLQubit.cpp  ObservablesLQubit.hpp
pennylane_lightning/src/simulators/lightning_qubit/tests/: CMakeLists.txt  Test_StateVectorLQubit.cpp  Test_StateVectorLQubitManaged.cpp  Test_StateVectorLQubitRaw.cpp  runner_lightning_qubit.cpp
pennylane_lightning/src/simulators/lightning_qubit/utils/: CMakeLists.txt  CPUMemoryModel.hpp  ConstantTestHelpers.hpp  ConstantUtil.hpp  CreateAllWires.hpp  IntegerInterval.hpp  KokkosSparse.hpp  LQubitTestHelpers.hpp  LinearAlgebra.hpp  Macros.hpp  Memory.hpp  RuntimeInfo.cpp  RuntimeInfo.hpp  SparseLinAlg.hpp  TestHelpersStateVectors.hpp  TestHelpersWires.hpp  TestKernels.hpp  TestStateVectors.hpp  Threading.hpp  TypeList.hpp
pennylane_lightning/src/utils/: BitUtil.hpp  CMakeLists.txt  ConstantUtil.hpp  Error.hpp  LinearAlgebra.hpp  Macros.hpp  Memory.hpp  RuntimeInfo.cpp  TestHelpers.hpp  TestHelpersWires.hpp  TestKernels.hpp  Threading.hpp  TypeTraits.hpp  Util.hpp
pennylane_lightning/src/utils/tests/: CMakeLists.txt  Test_BitUtil.cpp  Test_BitUtils.cpp  Test_ConstantUtil.cpp  Test_RuntimeInfo.cpp  Test_TypeTraits.cpp  Test_Util.cpp  Test_Utils.cpp
(+129 files in other folders)
